--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -25,6 +25,10 @@ body {
     box-shadow: 1px 2px 5px rgba(0, 0, 0, .31);
 }
 
+.errorMessege {
+    color: #a32236;
+}
+
 
 /* html, body {
     background-image: url('background.jpg');
