--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -1,15 +1,10 @@
-/* * {
-    margin: 0;
-    padding: 0;
-} */
-
 body {
     background-image: url('background.jpg');
     width: 100%;
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
     margin-top: 2em;
     margin-bottom: 2em;
     font-family: Roboto, Arial, sans-serif;
@@ -94,3 +89,8 @@ form {
     background-color: #3a4946 !important;
     border-color: #3a4946 !important;
 }
+
+/* .img {
+    height: 150px;
+    width: 150px;
+} */
