--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -7,7 +7,7 @@ body {
     /* align-items: center; */
     margin-top: 2em;
     margin-bottom: 2em;
-    font-family: Roboto, Arial, sans-serif;
+    font-family: Roboto, Verdana, sans-serif;
 }
 
 .main-block {
@@ -25,6 +25,7 @@ body {
 .errorMessege {
     color: #a32236;
     font-size: 12px;
+    padding-top: 5px
 }
 
 
@@ -68,6 +69,8 @@ h1 {
     font-size: 32px;
     font-weight: 300;
     text-align: center;
+    font-weight: bold;
+    color:#3a4946
 }
 
 form {
