--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -25,7 +25,7 @@ body {
 .errorMessege {
     color: #a32236;
     font-size: 12px;
-    padding-top: 5px
+    margin-top: 5px
 }
 
 
@@ -70,7 +70,7 @@ h1 {
     font-weight: 300;
     text-align: center;
     font-weight: bold;
-    color:#3a4946
+    color: #3a4946
 }
 
 form {
@@ -93,7 +93,14 @@ form {
     border-color: #3a4946 !important;
 }
 
-/* .img {
+.img {
+    margin-top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 50%; */
+    border-radius: 8px;
     height: 150px;
     width: 150px;
-} */
+    object-fit: cover;
+}
