--- a/src/MainChat.css
+++ b/src/MainChat.css
@@ -1,3 +1,16 @@
+body {
+  background-image: #617a74 !important;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  margin-top: 2em;
+  margin-bottom: 2em;
+  font-family: Roboto, Verdana, sans-serif;
+}
+
+
 .App {
   text-align: center;
 }
