--- a/src/MainChatNew.css
+++ b/src/MainChatNew.css
@@ -56,6 +56,7 @@ body {
     height: 50px;
     overflow: hidden;
     border-radius: 50%;
+
 }
 
 .cover {
@@ -70,7 +71,7 @@ body {
 .searchChat {
     position: relative;
     width: 100%;
-    height: 8%;
+    height: 50px;
     background: #08654e;
     display: flex;
     align-items: center;
@@ -88,3 +89,38 @@ input{
     border-radius: 30px;
     padding-left: 20px;
 }
+
+/* .chatsList{
+    position: relative;
+    overflow-y: auto; */
+    /*height: calc(100% - 50 - 60); *//*100% - searchChat height - header height*/
+    /* background: #3b6bd2;
+} */
+
+.contact{
+    position: relative;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    padding: 15px;
+    border-bottom: 1px solid #93d23b;
+    cursor: pointer;
+}
+
+h6 {
+    font-weight: bold;
+}
+
+.contactDetails {
+    margin-left: 15px;
+
+}
+
+/* .chatsList, .contact{
+    position: relative;
+    width: 45px;
+    height: 45px;
+    overflow: hidden;
+    border-radius: 50% ;
+} */
