--- a/src/MainChatNew.css
+++ b/src/MainChatNew.css
@@ -124,7 +124,7 @@ h6 {
     width: 100%;
 }
 
-.chatHeader {
+.contactItemHeader {
     display: flex;
     justify-content: space-between;
     /* margin-bottom: 5px; */
@@ -152,16 +152,40 @@ h6 {
     height: 40px;
 }
 
-.chat{
+.chat {
     width: 100%;
 }
 
-.chatInput{
+.chatInput {
     position: absolute;
     width: 100%;
     height: 60px;
-    padding:15px;
+    padding: 15px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     bottom: 5px;
+    /* background: #F5F5F5; */
 }
+
+#chatTypingArea {
+    width: 80%;
+    outline: none;
+    border: none;
+    background: #DEDEDE;
+}
+
+#chatDropup,
+#sendMsgBtn {
+    background-color: #617a74 !important;
+    border-color: #617a74 !important;
+    color: white;
+    border-color: white !important;
+    border-radius: 0px;
+}
+
+#chatDropup:hover,
+#sendMsgBtn:hover {
+    background-color: #445551 !important;
+    border-color: #445551 !important;
+}
+
