--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -5,12 +5,14 @@ body {
     display: flex;
     justify-content: center;
     /* align-items: center; */
-    margin-top: 2em;
-    margin-bottom: 2em;
+    /* margin-top: 2em; */
+    /* margin-bottom: 2em; */   
     font-family: Roboto, Verdana, sans-serif;
 }
 
 .main-block {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
     min-width: 360px;
     min-height: 300px;
     padding: 30px 0;
