--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -3,10 +3,7 @@ body {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    /* margin-top: 2em; */
-    /* margin-bottom: 2em; */   
+    justify-content: center;  
     font-family: Roboto, Verdana, sans-serif;
 }
 
@@ -30,41 +27,9 @@ body {
     margin-top: 5px
 }
 
-
-/* html, body {
-    background-image: url('background.jpg');
-    display: flex;
-    justify-content: center;
-    height: 100%;
+a:hover {
+    cursor: pointer;
 }
-
-body, div, h1, form, input, p{ 
-    padding: 0;
-    margin: 0;
-    outline: none;
-    font-family: Roboto, Arial, sans-serif;
-    font-size: 16px;
-} */
-
-/* problem: I used 'position:fixed' for the main block.
-It makes the registration form appear on top of the login form (so it looks like it replaces it, but it isnt..).
-also it makes the main block element not to react to scroll. 
-we need to understand how to *replace* the login main block with the registration main block by 
-clicking on "click here" link. */
-
-/* .main-block {
-    position: fixed;
-    top: 10%;
-    left: 40%;
-    min-width: 360px;
-    min-height: 300px; 
-    padding: 30px 0;
-    margin: auto;
-    border-radius: 5px; 
-    border: solid 1px #ccc;
-    box-shadow: 1px 2px 5px rgba(0,0,0,.31); 
-    background: #dce8d2;
- } */
 
 h1 {
     padding: 10px 0;
