--- a/src/MainChatNew.css
+++ b/src/MainChatNew.css
@@ -27,7 +27,6 @@
     flex: 30%;
     background: #DEDEDE;
     border-right: #a8ccc3;
-    /* border-radius: 5px; */
 }
 
 .rightSide {
@@ -40,7 +39,6 @@
     position: relative;
     width: 100%;
     height: 60px;
-    /* background: #dce8d2; */
     background: #F5F5F5;
     display: flex;
     align-items: center;
@@ -59,8 +57,6 @@
 
 .cover {
     position: absolute;
-    /* top: 0;
-    left: 0; */
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -92,14 +88,12 @@ input {
     position: relative;
     overflow-y: auto;
     height: calc(100% - 50px - 60px);
-    /*100% - searchChat height - header height*/
 }
 
 .contact {
     height: 90px;
     cursor: pointer;
     align-items: center;
-    /* border-bottom: 1px solid #aaa; */
     border-bottom: 1px solid rgb(210, 210, 210);
     padding: 10px 15px;
     display: flex;
@@ -131,11 +125,12 @@ h6 {
 }
 
 .time {
-    size: 0.75em;
+    font-size: 0.65em;
     color: #aaa;
 }
 
 .lastMessege {
+    margin-top: 7px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -166,9 +161,7 @@ h6 {
     height: 60px;
     padding: 15px;
     display: flex;
-    /* justify-content: space-between; */
     bottom: 5px;
-    /* background: #F5F5F5; */
 }
 
 #chatTypingArea {
@@ -200,7 +193,6 @@ h6 {
 .btn-success,
 .btn-success:active,
 .btn-success:visited {
-    /* background-color: #445551 !important; */
     background: #93af9c !important;
     border-color: #93af9c !important;
 }
@@ -232,7 +224,6 @@ h6 {
     position: relative;
 	max-width: 500px;
 	padding: 10px;
-	/* font-size: 1.25em; */
 	border-radius: 10px;
 }
 
