--- a/src/LoginAndRegister.css
+++ b/src/LoginAndRegister.css
@@ -65,9 +65,9 @@ form {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /* width: 50%; */
     border-radius: 8px;
     height: 150px;
     width: 150px;
-    object-fit: cover;
+    object-fit:contain;
+    /* object-fit:cover; */
 }
