deleted blue frame around input bar

--- a/src/MainChatNew.css
+++ b/src/MainChatNew.css
@@ -242,3 +242,11 @@ h6 {
     height: 300px;
     width: 300px;
 }
+
+#addContact:focus, input:focus, input.form-control:focus {
+    outline:none !important;
+    outline-width: 0 !important;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+}
