--- a/src/mainChatRight/UploadPopup.css
+++ b/src/mainChatRight/UploadPopup.css
@@ -16,3 +16,11 @@
     width: 100%;
     max-width: 640px;
 }
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
