--- a/src/mainChatRight/UploadPopup.css
+++ b/src/mainChatRight/UploadPopup.css
@@ -18,9 +18,14 @@
 }
 
 .center {
+    justify-content: space-between;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+  }
+
+  #recordBtn {
+      margin-right: 10px;
   }
